--- a/package.json
+++ b/package.json
@@ -53,13 +53,15 @@
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-google-charts": "^5.2.1",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.1.1",
     "rollup": "^4.28.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
