--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.0",
     "rollup": "^4.28.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
